<resources>
    <string name="app_name">Livro de Receitas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Menu -->
    <string name="search_text_menu">Pesquisar</string>
    <string name="favorite_text_menu">Minhas receitas</string>
    <string name="help_text_menu">Ajuda</string>
    <string name="select_btn_text">Selecionar \n Ingredientes</string>
    <string name="home_text_menu">Início</string>

    <!-- book-->
    <string name="book_favoritas">Favoritas</string>
    <string name="book_quero_fazer">Quero fazer</string>
    <string name="book_ja_fiz">Já fiz</string>

    <!-- categories -->
    <string name="category_favorite">favorite</string>
    <string name="category_done">done</string>
    <string name="category_wannaDo">wannaDo</string>

    <!--btn text-->

    <string name="favorite">Favorita</string>
    <string name="done">Já fiz</string>
    <string name="wannaDo">Quero fazer</string>

    <!--type search-->

    <string name="type_search">Selecione o tipo de busca:</string>
    <string name="similaridade">Similaridade</string>
    <string name="compatibilidade">Compatibilidade</string>
    <string name="hint_type_search">(Para mais informações sobre cada tipo de busca, clique no botão
        Ajuda na barra de navegação)</string>

    <!-- help -->

    <string name="help_about"> Livro de Receitas é um aplicativo para busca de receitas um pouco
        diferente dos que utilizamos normalmente. Aqui a busca é feita através da seleção de ingredintes e
        categorias. Então, basta você selecionar e adicionar os ingredientes que possui em casa, o tipo de
    receita que deseja preparar e clicar no botão buscar. O resultado é uma lista de receita para
    visulização.</string>
    <string name="help_list">✪ Quando uma busca é feita, o resultado é classificado
        em dois tipos: por Compatibilidade e por Similaridade.</string>
    <string name="help_compativel">Receitas compatíveis - requerem todos os
        ingredientes selecionados no momento da busca, podendo ter ou não outros além.</string>
    <string name="help_similar">Receitas similares - requerem um ou mais ingredientes
        selecionados no momento da busca, mas não todos.</string>
    <string name="help_nIngredientes">✪ Uma vez que o tipo de busca é escolhido, a lista de receitas
        é exibida. Junto a cada receita há também um valor, baseado nos ingredientes selecionados,
        informando a quantidade de ingredientes que você possui quando comparada com a quantidade
    total de ingredientes da receita.</string>
    <string name="help_visualizar">✪ Basta selecionar uma das receitas para visualizar mais detalhes
        sobre ingredientes, quantidades e modo de preparo.</string>
    <string name="help_categorias">✪ Ao abrir uma receita, além de visualizá-la,
        você pode salvá-la em sua coleção de receitas. Para salvar em alguma das categorias basta
        clicar nos ícones que se encontram no topo da tela de cada receita. Eles tem os seguintes
        significados:</string>
    <string name="help_favorita">Favoritas - Receitas que você mais gosta ou quer acessar
        rapidamente sem precisar pesquisar.</string>
    <string name="help_quero_fazer">Quero fazer - Receitas que você quer marcar porque deseja preparar
        em algum momento no futuro.</string>
    <string name="help_ja_fiz">Já fiz - Receitas que você já conseguiu preparar e deseja manter um
        registro disso.</string>
    <string name="help_minhas_receitas">✪ Você pode acessar facilmente sua coleção de receitas salvas
        clicando no botão "Minhas receitas" que se encontra da barra de navegação.</string>
</resources>
