<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projetoes.livrodereceitas.fragments.RecipeBookFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">


        <TextView
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/help_about"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <TextView
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/help_list"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_compatibilidade_black"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/help_compativel"
                style="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:src="@drawable/ic_similaridade_black"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/help_similar"
                style="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>


        <TextView
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/help_visualizar"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_favorite"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/help_favorita"
                style="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:src="@drawable/pot_black"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/help_quero_fazer"
                style="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/cooker_black"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/help_ja_fiz"
                style="@style/TextAppearance.AppCompat.Medium"
                />
        </LinearLayout>

        <TextView
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/help_minhas_receitas"
            style="@style/TextAppearance.AppCompat.Medium"
            />

    </LinearLayout>

    </ScrollView>

</FrameLayout>
