<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projetoes.livrodereceitas.fragments.TypeSearchFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_search"
            android:layout_margin="10dp"
            style="@style/TextAppearance.AppCompat.Title"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_type_search"
            android:layout_margin="10dp"
            style="@style/TextAppearance.AppCompat.Small"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/compatibilidade_btn"
                android:text="@string/compatibilidade"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_compatibilidade"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:textSize="30dp"
                android:onClick="onFavoritesPressed"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/similaridade_btn"
                android:text="@string/similaridade"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_similaridade"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:textSize="30dp"
                android:onClick="onWannaDoPressed"
                />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
